# ClovaLink

./: .gitignore  LICENSE  README.md  install.sh
.github/workflows/: docker-publish.yml
backend/: .env.example  Cargo.toml
backend/.sqlx/: query-05dca41b40865e5aebec17a88c5ee4a2f7cc0ea840c2ec38f9a2ad7399d81009.json  query-0a413641495e9b3b5827a641f398df6c2374e8fd14ea04c39f1a719d095dd726.json  query-0c3b4b817e64aa0366840133675914d60dd9d7735f86f2fe48ab7655fa45c52c.json  query-15191c311ef2f85d304bc4440700574c2ae2ae1a8757440818bd62f06cc7a13e.json  query-31b186b62efa4c7fbdde7e099df276413c034f0ac4d6ed9c5993053636ac9707.json  query-3511a5443043b51b7cf18d927e6fae66d35d5860406ce0d2ac5535e478654b51.json  query-39a7aa716f2d00b2ff4f277f5947991e4ec5b8d982f5cc47194e43b53798168d.json  query-41e7142299dfb0c221ceb0c2403e5e5b4afc80eb42c614b5c9828952deb66561.json  query-426b44ce21f0739f8c40258e0d9574b692401c53f6105bf5edfc25841a39b4f4.json  query-499d82139fedab89be511ccc22406acd222e38f9e8ee5dcf07b790b4a90cd99f.json  query-4acbc60d038b07d7771ad09b4efbc6df45cf7094cbb8bec5a876b26bff129a66.json  query-4de5876e05816cb5453d93ccbd6642010d94f33ba94fef8ab1cfb24345bc3b8d.json  query-4f4cb63e1a71ff12c0a8d44413d85a49cf1f502630de0165d8c1b87e959476ff.json  query-51db5e33995e9ebd9f44398a7834494fe5899be59053c309db91b5ac335aa401.json  query-5c89707c8c54f3c3fed04b296b26e23112b6eeed2c73c1c5ffec280cfa5aa76b.json  query-5d619f3cca55390b28b1ad8d7b09ba491d4daf6ae2bb23a61b6b3115b7179969.json  query-5fd5c8191543989f4249d27e77b49be8d69b7bb9896dd4207cdaef268fddc51f.json  query-6200dc1c835e15836bcef0d8c457033c8d07a2bde336cada34eb3c36953b0bf8.json  query-62e2ffef8736ec3fce317246ceb4ff835077291318eccff4a23313d471d86964.json  (+32 more)
backend/crates/ai/: Cargo.toml
backend/crates/ai/src/: error.rs  lib.rs  models.rs  openai.rs  provider.rs  redact.rs  service.rs
backend/crates/api/: Cargo.toml
backend/crates/api/src/: ai.rs  audit.rs  comments.rs  discord.rs  file_requests.rs  groups.rs  handlers.rs  health.rs  main.rs  search.rs  sharing.rs  text_extract.rs
backend/migrations/: 001_schema.sql  002_seed_data.sql  (+8 more)
frontend/: .env.example  package-lock.json  package.json
infra/: .env.example  Dockerfile.backend  compose.yml
(+35 files in other folders)
