[package]
name = "clovalink_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1.42", features = ["full"] }
tower = { version = "0.5", features = ["timeout", "limit", "load-shed"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "timeout", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
jsonwebtoken = "9"
argon2 = "0.5"
nanoid = "0.4"
clovalink_core = { path = "../core" }
clovalink_auth = { path = "../auth" }
clovalink_storage = { path = "../storage" }
clovalink_extensions = { path = "../extensions" }
clovalink_ai = { path = "../ai" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
totp-rs = { version = "5.6", features = ["qr", "serde_support"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
futures = "0.3"
zip = "2.2"
sha2 = "0.10"
hex = "0.4"
ulid = "1.1"
blake3 = "1.5"
url = "2.5"
governor = "0.6"
nonzero_ext = "0.3"
bytes = "1.5"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
async-trait = "0.1"

# Text extraction for AI features
pdf-extract = "0.7"
calamine = "0.26"
quick-xml = "0.37"
